# machine-learning-zoomcamp

./: .gitignore  README.md
01.intro/: homework1.ipynb
02.regression/: homework2.ipynb
03.classfication/: homework3.ipynb
04.evaluation/: homework4.ipynb
05.deployment/homework5/: Dockerfile  Q4request.py  Q6request.py  homework5.ipynb  predict.py  pyproject.toml
06.trees/: homework6.ipynb
08.deeplearning/: homework8.ipynb  reference.ipynb
09.serverless/: Dockerfile  awsdeploy.sh  homework9.ipynb  homework9.py  lambda_function.py  test.py
10.kubernetes/: q6_test_hpa.py
10.kubernetes/k8s/: deployment.yaml  service.yaml
midterm-project/: Dockerfile  README.md  notebook.ipynb  predict.py  pyproject.toml  score_predict_model.pkl  score_predict_model_dt.pkl  score_predict_model_lr.pkl  testrequest.py  train.py
